# video-toolkit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  package.json  pyproject.toml  workspace.json
.claude/: host-env.md.example  onboarding-prompt.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
_internal/: BACKLOG.md  CHANGELOG.md  ROADMAP.md  toolkit-registry.json
commands/: add-music.md  brand.md  check-brand.md  contribute.md  cut-tune.md  cut.md  design.md  fine-tune.md  generate-voiceover.md  narrate.md  publish.md  render.md  scene-review.md  setup.md  skills.md  slide-design.md  slide-review.md  sync-template.md  sync.md  template.md  versions.md  video.md
docs/: contributing.md  creating-brands.md  creating-templates.md  getting-started.md  ltx2.md  modal-setup.md  non-dev-playbook.md  optional-components.md  qwen-edit-patterns.md  remotion-patterns.md  remotion-skills-sync.md  runpod-setup.md  tools-reference.md  video-timing.md
examples/: README.md
lib/: brand.ts  generate-brand-ts.ts  index.ts
scripts/: migrate_to_codex.py
tools/: addmusic.py  chain_video.py  check_stale_projects.py  detect_beats.py  dewatermark.py  file_transfer.py  ingest_media.py  locate_watermark.py  ltx2.py  music_gen.py  publish_web.py  render_reel.py  render_screenplay_html.py  sync-brand.sh  sync_template.py  sync_timing.py  transcribe.py  verify_setup.py
video_toolkit/: __init__.py  addmusic.py  audio_calibrate.py  chain_video.py  check_brand.py  check_stale_projects.py  cloud_gpu.py  config.py  (+26 more)
(+233 files in other folders)
